# pr2_household_devices

./: HOW_TO_BUILD  README.md
cartesian_motion/: CMakeLists.txt  package.xml
cartesian_motion/launch/: cartesian_motion.launch  jtcart_ctrl.launch  reset_ctrl.launch
cartesian_motion/scripts/: cartesian_motion.py
cartesian_motion/srv/: MoveGripper.srv  TurnGripper.srv
device_interface/: CMakeLists.txt  RUN_LIST  package.xml  setup.py
device_interface/launch/: device_interface.launch  flip_switch.launch  push_button.launch  turn_knob.launch
device_interface/scripts/: broadcast_TFs.py  device_interface.py  flip_switch.py  move_head.py  old_interface.py  publish_Markers.py  publish_PointClouds.py  push_button.py  turn_knob.py
device_interface/scripts/icra_demo/: find_panel.py  find_stereo.py  find_stereo_tf.py  use_panel.py  use_stereo.py
device_interface/srv/: LevelTF.srv  SendPointCloud.srv  SendTF.srv
find_devices/: CMakeLists.txt  HOW_TO_ADD_FINDERS  package.xml  setup.py
find_devices/launch/: find_things.launch
find_devices/scripts/: find_button.py  find_device.py  find_knob.py  find_switch.py
find_devices/scripts/dev/: find_things.py
find_devices/src/: filter_cloud_by_axes.cpp  get_knob_params.cpp  plane_finder.cpp  transform_PointCloud2.cpp
find_devices/src/find_devices/: user_tools.py
find_devices/srv/: FilterCloudByAxes.srv  FindDevice.srv  FindKnob.srv  FindSwitch.srv  FitPlane.srv  GetKnobParams.srv  TransformPointCloud2.srv
pr2_household_devices/: CMakeLists.txt  package.xml
sense_contact/: CMakeLists.txt  package.xml
sense_contact/launch/: sense_contact_markers.launch
sense_contact/scripts/: contact_markers.py  sense_contact.py
teleop_knobs/: CMakeLists.txt  RUN_LIST  package.xml
teleop_knobs/launch/: switch_to_cartesian.launch
teleop_knobs/scripts/: freeze_frame.bash  reset_pose.py
use_devices/: CMakeLists.txt  package.xml
use_devices/launch/: use_things.launch
use_devices/scripts/: point_at_frame.py  test_grasp_adjust.py  use_button.py  use_knob.py  use_switch.py
use_devices/srv/: FindCylinder.srv  PointAtFrame.srv  TurnKnob.srv  UseButton.srv  UseKnob.srv  UseSwitch.srv
