<?xml version="1.0"?>
<package>
  <name>device_interface</name>

  <version>0.0.0</version>
  <description>
    
    Provides GUI for finding and using knobs, buttons, switches, etc.

  </description>



  <maintainer email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </maintainer>

  <license></license>

  <url type="website">http://ros.org/wiki/pr2_household_devices</url>

  <author email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>find_devices</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>use_devices</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>find_devices</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>use_devices</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <!-- For Service Generation -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>





