<?xml version="1.0"?>
<package>
  <name>sense_contact</name>

  <version>0.0.0</version>
  <description>

    Custom package for sensing contact with the front and sides of the
    tactile sensors on the instrumented PR2 gripper pads. Good for pushing
    buttons, flipping switches, and other miscellaneous tasks.

  </description>



  <maintainer email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </maintainer>

  <license></license>

  <url type="website">http://ros.org/wiki/pr2_household_devices</url>

  <author email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>


</package>

