<?xml version="1.0"?>
<package>
  <name>use_devices</name>

  <version>0.0.0</version>
  <description>

    Contains scripts for using all kinds of devices and controls.
    Each script is exposed to the user interface as a service.

  </description>



  <maintainer email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </maintainer>

  <license></license>

  <url type="website">http://ros.org/wiki/pr2_household_devices</url>

  <author email="ruebenm@onid.oregonstate.edu">
    Matthew Rueben
  </author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>pr2_gripper_sensor_msgs</build_depend>
  <build_depend>cartesian_motion</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>
  <run_depend>cartesian_motion</run_depend>

  <!-- For Service Generation -->
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
